@@ -53,6 +53,7 @@ public:
         virtual int     number_of_objects(const char *) { return object_list.size(); };
         virtual int     retrieve(int objnum,char **,std::size_t *len); // To a memory block
         virtual int     retrieve(int objnum,const char *);       // To a file
+	virtual const char *get_archive_type() { return "TABLE"; };
 private:
 	void IndexTableFile(void);
 	Table();
